@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05a: *********************************
 
+BUG: (9/22/06, DN) AlphaBlender crashes on narrow images.
+FIX: In AlphaBlender.composeLine add return when minInt == maxInt.
+
 IMP: (9/22/06, SMR) Node type in Node Preferences is now selectable (Bug #1218).
 
 BUG: (9/22/06, SMR) "Document Current Technology" crashes.
